--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <p class="footer">Designed & Developed with &#10084;&#65039; by Karan</p>
+    <p class="footer">Designed & Developed by Aditya</p>
 
     <script src="script.js"></script>
   </body>
